# ManoMitra

./: .gitignore  README.md  SETUP.md  setup.py
Docs/: Final-workflow.md  MY-requirements.md  PS-Requirements.md  workflow.md
agentic-server/: .env.example  pyproject.toml  requirements.txt
agentic-server/Docs/: agent-info.md  agent-workflow.md  demo-conversasion.md  ex.md  final-response.json  folder-struct.md  report.md  system-instruction.md  tools.md
agentic-server/Docs/x/: main.txt  report_service.txt  supervisor.txt
agentic-server/app/: config.py  main.py
agentic-server/app/agents/: analytic_supervisor.py  pathway_generator.py  supervisor.py
agentic-server/app/db/: connect.py
agentic-server/app/schemas/: analytics.py  demo_report.py  learning_pathway.py  standard_report.py
agentic-server/app/services/: data_fetcher.py  pathway_service.py
agentic-server/app/tools/: search_tools.py
agentic-server/app/utils/: logger.py
ai-server/: pyproject.toml  requirements.txt
analytic-agentic-server/: README.md  main.py  pyproject.toml  requirements.txt
analytic-agentic-server/agents/: analytic_supervisor.py
analytic-agentic-server/db/: connect.py
analytic-agentic-server/schemas/: analytics.py
analytic-agentic-server/services/: data_fetcher.py
analytic-agentic-server/utils/: logger.py
server/: ENDPOINTS.md  README.md  config.env.example  create-dirs.sh  ensure-dirs.js  package-lock.json  package.json  server.js
server/auth/: jwt.js
upnext/: .md
web/: env.example  install-deps.sh  middleware.ts  next.config.ts  package-lock.json  package.json
(+188 files in other folders)
