[project]
name = "agentic-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "langgraph-supervisor>=0.0.29",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
    "xmltodict>=0.15.0",
    "youtube-search>=2.1.2",
]
